# prospector

./: .gitignore  AGENTS.md  pyproject.toml
.streamlit/: config.toml
data/cohorts/: vol_quintiles_2026-04-28.json
data/paper/: manifest.toml
docs/: README.md  implementation-plan.md  scoring-function.md  trading-strategies.md  trading-strategy-discovery-synopsis.md
docs/charter/: README.md  axioms.md  constraints.md  operational-limits.md  philosophy.md  risk-tolerance.md
docs/components/: README.md  calibration-curves.md  clv-instrumentation.md  equal-sigma-sizing.md  fee-modeling-kalshi.md  hedging-overlay-perp.md  kelly-sizing.md  llm-altdata-extraction.md  (+2 more)
scripts/: backfill_hyperliquid.py  backfill_kalshi.py  build_calibration_curve.py  capital_constrained_sim.py  coin_universe_profile.py  compute_clv.py  compute_sigma_table.py  crosscheck_kalshi_hf.py  dashboard.py  data_incremental_launchd.sh  divergence_study.py  elder_bayesian_search.py  elder_cohort_report.py  elder_cohort_search.py  elder_cross_coin_test.py  elder_replay_paper.py  fit_perp_implied_dist.py  fomc_event_study.py  migrate_trevorjs.py  paper_trade.py  paper_trade_elder.py  paper_trade_elder_launchd.sh  paper_trade_insurance_launchd.sh  paper_trade_launchd.sh  pull_kalshi_incremental.py  reconstruct_kalshi_ladder.py  refresh_calibration_store.py  return_distribution.py  vol_surface_diagnostic.py  walk_forward_backtest.py  walk_forward_top_configs.py
tests/: test_dashboard.py  test_dashboard_elder.py  test_elder_bayesian_search.py  test_ledger.py  test_manifest.py  test_orchestrator.py
(+137 files in other folders)
